Changelog
=========


1.5 (unreleased)
----------------

- Fix several template issues.
  [mathias.leimgruber]

- Use content-core macro on member view.
  [mathias.leimgruber]

- Use content-core macro on contact view.
  [mathias.leimgruber]

1.4 (2013-01-25)
----------------

- Fix TAL expression in folder contacts listing template.
  [jone]

- Added upgrade step to migrate Contact objects from P.Maps to c.geo.
  [lgraf]

- Moved map viewlet to plone.belowcontentbody.
  [lgraf]

- Enabled automatic geocoding for Contact objects.
  [lgraf]

- Added 'abovecontentbody' viewlet to contact template (needed for cg.geo map).
  [lgraf]

- Added collective.geo.* integration
  [lgraf]

- Removed Products.Maps
  [lgraf]


1.3.6 (2012-11-16)
------------------

- Fix firstname lastname order.
  [mathias.leimgruber]

1.3.5 (2012-11-16)
------------------

- Rerelease 1.3.4 as 1.3.5, something went wrong.
  [mathias.leimgruber]


1.3.4 (2012-10-10)
------------------

- Added conditions in contacts view. Only display labels of fields which are not empty.
  [Julian Infanger]

- Temporary remove maps from contact view.
  [mathias.leimgruber]

- Added missing dependency.
  [phgross]

- Do not lookup geocordinates if no api_key is defined.
  [Julian Infanger]


1.3.3 (2012-08-20)
------------------

- Removed some wrong CSS.
  [tschanzt]

- Remove base_view from allowed Contact views.
  [jone]

- Add English translations.
  [jone]

- Cleanup schemas: remove field description which are not really helpful.
  [jone]

- Remedy PTSTranslationDomain deprecation warning.
  [jone]

- Remedy five:implements deprecation warning.
  [jone]


1.3.2 (2012-05-09)
------------------

- Improve contact view. Use tables to display the contact informations.
  [Julian Infanger]


1.3.1 (2012-03-19)
------------------

- Hide Website lable in contactlisting if there's no website.
  [mathias.leimgruber]

- Show function on contactlisting.
  [mathias.leimgruber]


1.3 (2012-03-05)
----------------
