@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<object name="Member"
+   meta_type="Factory-based Type Information with dynamic views">
+
+ <action title="Edit" icon_expr="" action_id="sl-edit" category="sl-actions"
+    condition_expr="" url_expr="string:${object_url}/edit" visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="Delete" icon_expr="" action_id="sl-delete" category="sl-actions"
+    condition_expr=""
+    url_expr="string:${here/absolute_url}/delete_confirmation" visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+
+</object>
